fixed html tag in index.html that made css treat index and services header section the same. created anchor tage around logo in nav bar for both pages that takes you to index.html (stretch)

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -88,7 +88,7 @@ nav {
 	border:3px solid black;
 }
 
-nav a {
+nav .link {
 padding:10px 30px;
 width:15%;
 color:black;
